--- a/templates/profil/param_acc.html.twig
+++ b/templates/profil/param_acc.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block sidebar %}
-{{ include ('include/profil_sidebar.html.twig', {'profilType': profilType}) }}
+{{ include ('include/profil_sidebar.html.twig') }}
 {% endblock %}
 
 {% block body %}
